# apriltag2_detection

./: .gitignore  Dockerfile  Makefile  README.md  act_addon_environment.sh  environment.sh  node_launch.sh
src/apriltags2_ros/: CMakeLists.txt
src/apriltags2_ros/apriltags2/include/: apriltag.h
src/apriltags2_ros/apriltags2/include/common/: timeprofile.h
src/apriltags2_ros/apriltags2/src/: apriltag.c
src/apriltags2_ros/apriltags2_ros/: CMakeLists.txt  README.md  package.xml  setup.py
src/apriltags2_ros/apriltags2_ros/include/apriltags2_ros/: common_functions.h  continuous_detector.h
src/apriltags2_ros/apriltags2_ros/include/apriltags2_ros_post_process/: __init__.py  data_adapter_utils.py  rotation_utils.py
src/apriltags2_ros/apriltags2_ros/launch/: apriltag2_collect_stats.launch  apriltag2_demo.launch  apriltag_detector_node.launch  auto_testor.launch  continuous_detection.launch  detection_post_process.launch  detection_to_local_frame.launch
src/apriltags2_ros/apriltags2_ros/msg/: VehiclePoseEuler.msg
src/apriltags2_ros/apriltags2_ros/src/: common_functions.cpp  continuous_detector.cpp  cpu_ram_bubble_plot.py  detection_post_process.py  plot_analysis_result.py  plot_cpu_ram.py  plot_decimate_accuracy.py  plot_distance_mismatch.py  plot_mismatch.py  plot_time_consumption.py  plot_yaw_accuracy.py  pose_in_robot_frame.py  publish_detections_in_local_frame.py  rotation_utils.py  single_image_detector.cpp
src/apriltags2_ros/apriltags2_ros/test/: test_post_processing.py  test_post_processing.test
src/apriltags2_ros/apriltags2_ros/test_result/single_result/: 2018-11-21__13:37:34_1.yaml  2018-11-21__13:37:34_10.yaml  2018-11-21__13:37:34_2.yaml  2018-11-21__13:37:34_3.yaml  2018-11-21__13:37:34_4.yaml  2018-11-21__13:37:34_5.yaml  2018-11-21__13:37:34_6.yaml  2018-11-21__13:37:34_7.yaml  2018-11-21__13:37:34_8.yaml  2018-11-21__13:37:34_9.yaml  2018-11-21__14:25:35_1.yaml  2018-11-21__14:25:35_4.yaml  2018-11-21__14:27:59_10.yaml  2018-11-21__14:27:59_2.yaml  2018-11-21__14:27:59_6.yaml  2018-11-21__14:27:59_8.yaml  2018-11-21__14:41:31_10.yaml  2018-11-21__14:41:31_9.yaml  2018-11-24_05:35:13_6.yaml  2018-11-24__05:23:17_2.yaml  2018-11-24__05:23:17_3.yaml  2018-11-24__05:23:17_8.yaml  2018-11-24__05:27:18_1.yaml  2018-11-24__05:27:18_4.yaml  2018-11-24__05:27:18_5.yaml  2018-11-24__05:27:18_7.yaml  2018-11-24__05:31:36_3.yaml
src/apriltags2_ros/apriltags2_ros/test_result/summary/: 2018-11-21__13:37:34.yaml  2018-11-21__14:25:35.yaml  2018-11-21__14:41:31.yaml  2018-11-24__05:31:36_1.0_10.yaml
src/apriltags2_ros/apriltags2_ros/tests/: Jerry Jho  detection_post_process_testor_node.py  detection_post_process_testor_node.test  detection_to_local_frame_testor_node.py  detection_to_local_frame_testor_node.test  test_data_adapter_utils.py  test_data_adapter_utils.test  test_post_processing.py  test_post_processing.test  test_rotation_utils.py  test_rotation_utils.test
src/joy_cli/: CMakeLists.txt  package.xml
src/joy_cli/launch/: joy_cli.launch
src/joy_cli/src/: joy_cli.py
src/pi_camera/launch/: camera_apriltag_demo.launch  decoder_node.launch
src/pi_camera/src/: camera_node_sequence.py
src/rosprofiler/src/rosprofiler/: host_monitor.py  node_monitor.py
